--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -19,12 +19,13 @@ h1 {
 }
 
 
-img {
-    width:300px;
-    height:300px;
+.pic {
+
     margin-left: auto;
     margin-right: auto;
+    border: solid black;
 }
+
 
 body {
     margin: auto;
